feat: add simple error handling example in java streams